--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   flutter_native_splash: ^1.2.0
   flutter_launcher_icons: ^0.9.1
   mask_text_input_formatter: ^1.2.1
-  
+  sliding_sheet: ^0.2.4
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
