--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.0.0+3
   fl_chart: ^0.36.2
   firebase_core: "^1.3.0"
+  firebase_storage: ^8.0.3
+  file_picker: ^3.0.1
   firebase_auth: "^2.0.0"
   cloud_firestore: "^2.3.0"
   http: ^0.13.3
