--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.1
   mask_text_input_formatter: ^1.2.1
   sliding_sheet: ^0.2.4
+  table_calendar: ^3.0.3
     
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
