--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,20 +31,25 @@ dependencies:
    sdk: flutter
   intl:  
   provider: ^5.0.0
+  platform: ^3.1.0
   shared_preferences: ^2.0.6
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
   sqflite: ^2.0.0+3
   fl_chart: ^0.36.2
-  firebase_core: "^1.3.0"
+  firebase_core: "^1.14.1"
   firebase_storage: ^8.0.3
   file_picker: ^3.0.1
   firebase_auth: "^2.0.0"
   cloud_firestore: "^2.3.0"
+  firebase_messaging: "^11.2.13"
   http: ^0.13.3
   flutter_native_splash: ^1.2.0
   flutter_launcher_icons: ^0.9.1
+  timezone: ^0.8.0
+  flutter_native_timezone: ^2.0.0
+  flutter_local_notifications: ^9.4.0
   mask_text_input_formatter: ^2.0.0
   sliding_sheet: ^0.2.4
   table_calendar: ^3.0.3
