--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,23 +30,23 @@ dependencies:
   flutter:
    sdk: flutter
   intl:  
-  provider: ^5.0.0
+  provider: ^6.0.3
   shared_preferences: ^2.0.6
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.2
   sqflite: ^2.0.0+3
-  fl_chart: ^0.36.2
+  fl_chart: ^0.55.0
   firebase_core: "^1.3.0"
-  firebase_storage: ^8.0.3
+  firebase_storage: ^10.3.2
   file_picker: ^3.0.1
-  firebase_auth: "^2.0.0"
-  cloud_firestore: "^2.3.0"
+  firebase_auth: ^3.4.2
+  cloud_firestore: ^3.3.0
   http: ^0.13.3
-  flutter_native_splash: ^1.2.0
+  flutter_native_splash: ^2.2.4
   flutter_launcher_icons: ^0.9.1
   mask_text_input_formatter: ^2.0.0
-  sliding_sheet: ^0.2.4
+  sliding_sheet: ^0.5.2
   table_calendar: ^3.0.3
     
   # The following adds the Cupertino Icons font to your application.
@@ -76,7 +76,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
